--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       font-weight: bold;
       font-size: 16px;
     }
+    .slim a {
+      text-decoration: none;
+    }
     header {
       display: flex;
       justify-content: space-between;
