--- a/index.html
+++ b/index.html
@@ -95,11 +95,28 @@
   </script>
 </head>
 <body>
-  <div class="slim">
-    <a href="/">
-        gabrieljones.it
-    </a>
+<div class="it-header-slim-wrapper">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="it-header-slim-wrapper-content">
+          <a class="d-none d-lg-block navbar-brand" href="/siti/"> 
+            <img src="/assets/logo.png" alt="Logo" width="40" height="40">Sito appartenente a gabrieljones.it
+          </a>
+          <div class="header-slim-right-zone">
+            <!-- Account options -->
+            
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
+  
+  
+  
+  
+  
   <header>
     <div class="logo">Progetti GMJ</div>
     <div class="menu-toggle" id="menu-toggle">
