--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body {
       margin: 0;
-      font-family: 'Playfair Display', serif;
+      font-family: 'arial', serif;
     }
     header {
       display: flex;
@@ -22,17 +22,20 @@
       border-bottom: 1px solid #eee;
       position: relative;
       z-index: 1000;
+      font-family: 'Playfair Display', serif;
     }
 
     .logo {
       font-size: 36px;
       font-weight: bold;
       letter-spacing: 5px;
+      font-family: 'Playfair Display', serif;
     }
 
     nav {
       display: flex;
       gap: 40px;
+      font-family: 'Playfair Display', serif;
     }
 
     nav a {
@@ -40,7 +43,7 @@
       color: black;
       font-size: 14px;
       letter-spacing: 2px;
-      font-family: sans-serif;
+      font-family: 'Playfair Display', serif;
     }
 
     nav a:hover {
