--- a/NexBlogPlatform/index.html
+++ b/NexBlogPlatform/index.html
@@ -137,7 +137,7 @@
   
 <div class="container text-center">
 <h1>NexBlogPlatform</h1>
-  <h3>La piattaforma per il bloggin dei progetti</h3>
+  <h3>Progetti aziendali per successo del progetto</h3>
 </div>
 
 
