--- a/index.html
+++ b/index.html
@@ -134,7 +134,11 @@
       <a href="/progetti/all/">MORE</a>
     </nav>
   </header>
-  
+
+  <div class="container">
+    <script type="text/javascript" src="https://www.protezionecivile.fvg.it/widgets/pcrfvgit_alert.js"></script><div class="pcrfvgit_alert_widget" data-istatcode="93022"></div>
+      </div>
+
 <div class="container text-center">
   <div class="row">
     <div class="col">
